# Morph

./: Cargo.toml  LOGIC_DESCRIPTION.md  README.md  README.ru.md  build.rs  config.yaml
proto/: voice_embeddings.proto
src/: main.rs
src/controllers/: embedding_controller.rs
src/pb/: mod.rs  voice_embeddings.rs
src/service/: mod.rs  voice_embedder.rs
src/setting/: settings.rs
src/utils/: mod.rs  spec_utils.rs
