[package]
name = "morph"
version = "0.1.0"
authors = ["Artem Sergeev"]
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
log = "0.4.27"
prost = "0.13.5"
hound = "3.5.1"
anyhow = "1.0.98"
config = "0.15.11"
rustfft = "6.3.0"
ndarray = "0.16.1"
plotters = "0.3.7"
env_logger = "0.11.8"
serde_json = "1.0.140"
num-complex = "0.4.6"
tonic = { version = "0.13.1", features = ["gzip"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
ort = { version = "=2.0.0-rc.9", features = ["load-dynamic", "ndarray"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = [] }
